1.2.0p3:
    Checks & Agents:
    * mssql_backup: Fixed problems with datetime/timezone calculations

    BI:
    * Great speed up of rule compilation in large environments

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks
      are replaced with dummy checks always being OK
    * FIX: Precisely define order of reading of configuration files. This
      fixes a WATO rule precedence problem

    Checks & Agents:
    * FIX: Fixed syntax errors in a bunch of man pages
    * if_lancom: silently ignore Point-To-Point interfaces
    * if_lancom: add SSID to logical WLAN interface names
    * Added a collection of MSSQL checks for monitoring MSSQL servers
      (backups, tablespaces, counters)
    * New check wut_webio_io: Monitor the IO input channels on W&T Web-IO 
      devices
    * nfsmounts: reclassify "Stale NFS handle" from WARN to CRIT
    * ORACLE agent/checks: better error handling. Let SQL errors get
      through into check output, output sections even if no database
      is running.
    * oracle_version: new check outputting the version of an ORACLE
      database - and using uncached direct SQL output.
    * ORACLE agent: fix handling of EXCLUDE, new variable ONLY_SIDS
      for explicitely listing SIDs to monitor
    * mk_logwatch on Linux: new options regex and iregex for file selection
    * remove obsolete ORACLE checks where no agent plugins where available
    * FIX: printer_supply: Fix problem on DELL printers with "S/N" in output
      (thanks to Sebastian Talmon)
    * FIX: winperf_phydisk: Fix typo (lead to WATO rule not being applied)
    * Windows agent: new [global] option crash_debug (see online docu)
    * AIX agent: new check for LVM volume status in rootvg.
    * PostgreSQL plugin: agent is now modified to work with PostgreSQL 
      versions newer than 8.1. (multiple reports, thanks!)

    Multisite: