@@ -2,6 +2,10 @@
     Checks & Agents:
     * mssql_backup: Fixed problems with datetime/timezone calculations
 
+    WATO:
+    * FIX: remove line about number of rules in rule set overview
+      (that garbled the logical layout)
+
     BI:
     * Great speed up of rule compilation in large environments
 
